@@ -3,3 +3,4 @@ usr/bin/gdnsd_geoip_test
 usr/lib/*/gdnsd/gdnsd_extmon_helper
 usr/lib/*/gdnsd/lib*so
 usr/lib/*/gdnsd/plugin_*so
+lib/systemd/system/gdnsd.service
