@@ -2,6 +2,8 @@ gdnsd (2.1.0-1) unstable; urgency=medium
 
   * New upstream release.
   * Switch upstream's URLs to new location.
+  * Upstream now supports systemd; ship their unit file and add a
+    build-dependency to dh-systemd.
 
  -- Faidon Liambotis <paravoid@debian.org>  Mon, 20 Oct 2014 23:51:13 +0300
 
